--- a/vue/blog/package.json
+++ b/vue/blog/package.json
@@ -8,16 +8,26 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "animate.css": "^4.1.1",
+    "animate.css": "^3.7.2",
     "axios": "^0.21.1",
+    "clipboard": "^2.0.6",
     "core-js": "^3.8.3",
-    "mitt": "^3.0.0",
+    "dayjs": "^1.10.6",
+    "easy-typer-js": "^2.1.0",
+    "highlight.js": "^10.0.3",
+    "markdown-it": "^13.0.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.33",
     "pinia-plugin-persist": "^1.0.0",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
+    "tocbot": "^4.20.1",
+    "v3-infinite-loading": "^1.2.2",
     "vue": "^3.2.13",
     "vue-axios": "^3.4.1",
     "vue-router": "^4.0.3",
+    "vue-social-share": "^0.0.3",
+    "vue3-image-preview-plus": "1.2.0",
     "vuetify": "^3.1.4"
   },
   "devDependencies": {
@@ -35,6 +45,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
+    "sass-loader": "^13.2.2",
     "typescript": "~4.5.5"
   },
   "eslintConfig": {
