--- a/vue/blog/tsconfig.json
+++ b/vue/blog/tsconfig.json
@@ -15,7 +15,9 @@
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
-      "webpack-env","pinia-plugin-persist","vue"
+      "webpack-env",
+      "pinia-plugin-persist",
+      "vue",
     ],
     "paths": {
       "@/*": [
@@ -36,7 +38,8 @@
     "tests/**/*.ts",
     "src/**/*.d.ts",
     "tests/**/*.tsx",
-    "node_modules/@types/vuetify/types/*.d.ts"  ],
+    "node_modules/@types/vuetify/types/*.d.ts"
+  ],
   "exclude": [
     "node_modules"
   ]
